# LycChatOps

./: README.md  pyproject.toml
lyc_chatops/: config.py
lyc_chatops/plugins/azure/: app_service.plug  app_service.py
tests/: test_lyc_chatops.py
